tp05/02-pod-with-sa.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-sa
spec:
  serviceAccountName: my-app-sa
  containers:
  - name: app
    image: nginx:1.29-alpine
    command: ['sh', '-c', 'sleep 3600']
