tp05/19-image-pull-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-image-pod
  namespace: default
spec:
  serviceAccountName: app-with-registry
  containers:
  - name: app
    image: private-registry.example.com/my-app:v1.0
